# fv3-jedi-tools

./: .gitignore  README.md  setup.cfg  setup.py
Conf/: background.yaml  convert_ensemble_gfs.yaml  convert_ensemble_gfsdiscover.yaml  convert_states.yaml  geos_4dvar.yaml  observations.yaml
Conf/GMAO/: convert_ensemble_yaml.yaml  get_ensemble.yaml  gsidiag_to_ioda.yml
Conf/GMAO/CylcSuiteConf/: gsi-diag_to_ioda.yml  gsidiag_to_ioda.yml
Conf/Templates/: AGCM.rc  a_convert_ensemble.yaml  b_parameters_loc_ens.yaml  cap_restart  e_analysis_to_increment.yaml
Config/: convert_ensemble_gfs.yaml  ensemble.yaml
Config/EMC/: untar_ensemble.yml
Config/EMC/2020010100/mem080/: gfs_ctrl.nc
Config/GMAO/: gsidiag_to_ioda.yml
Config/Templates/: a1_convert_ensemble.yaml  a2_convert_ensemble.yaml  a3_convert_ensemble.yaml  b_parameters_loc_fix.yaml  c_hyb-4dvar_geos.yaml  d_convert_ana_and_bkg.yaml  f_add_increment.yaml  g_restart_to_background.yaml  h_hofx.yaml  i_ensemble_variance.yaml  runs.csh  tile_output_background.yaml
Data/fv3files/: fv3grid_c0192.nc4
src/: __init__.py  bash_command.sh  convert_state_dict.py  convert_state_yaml_gen.py  datetimes_processed.txt  fv3model.py  geos.py  geos_tools.py  gfs.py  gfs_tools.py  gfs_yaml.py  ls_model_utils.txt  model_tools.py  model_utils.py  process_ensemble.py
src/Config/mains/: DateConfigFile.py  __init__.py
src/Config/modules/: __init__.py  common_conf.py  geos_conf.py  gfs_conf.py
src/ConvertEnsemble/mains/: process_ensemble.py  process_ensemble_gfsdiscover.py
src/ConvertEnsemble/modules/: fv3mod_ens_proc.py  fv3model.py  gfs.py  gfs_ens_proc.py
src/DaRuns/mains/: GeosVar.py  __init__.py
src/Diagnostics/: femps_convergence.py
src/Diagnostics/mains/: __init__.py  gradient_norm.py  hofx_pdf_omb_oma.py  two_field_rms_corr.py
src/EnsHandling/mains/: GeosEns0HourFcsts.py  __init__.py
src/EnsHandling/modules/: EnsHandling.py  __init__.py
src/ObsProcessing/mains/: ObsHandlingDriver.py  gsid_to_ioda.py
src/ObsProcessing/modules/: ObsHandling.py  __init__.py  gsid2ioda_driver.py
src/StaticB/: convert_to_c192.sh
src/StaticB/bump_1.0/: convert_to_c192.sh  coupler.sh  daily.sh  dirac.sh  final.sh  main.sh  merge.sh  regridding.sh  split.sh  variational.sh
src/Utils/modules/: utils.py
src/Workflows/EMC/3denvar-bench/: env.bash  prepare_run.bash  run.bash
src/Workflows/EMC/ConvertEnsColdStarts_To_BVars/: convertstate_cold2bvars.yaml  convertstate_readwrite.yaml  ensemble_cleanup.yaml  experiment_cleanup.yaml  get_ensemble.yaml  spectral_uv2psichi.py  stage_jedi_config.yaml  stage_static_data.yaml  suite.rc  tar_bvar_ensemble.yaml
src/Workflows/GMAO/GsiDiags2Ioda/: gsidiag_to_ioda.yaml
src/Workflows/Generic/Diagnostics/: da_block_convergence.yaml  da_convergence.yaml  field_plot.yaml  hofx_innovations.yaml  hofx_map.yaml  log_timing.yaml
src/Workflows/Generic/GsiDiags2Ioda/: gsidiag_to_ioda.yaml
src/Workflows/HOFX3D/: config.yml  suite.rc
src/Workflows/StaticB/: README.md
src/Workflows/StaticB/bump_1.0/: conversion.sh  convert.sh  coupler.sh  daily.sh  dirac.sh  final.sh  functions.sh  localization.sh  main.sh  merge.sh  parameters.sh  regrid.sh  regridding.sh  split.sh  variational.sh
src/Workflows/StaticB/bump_1.1/: convert.sh  daily.sh  dirac.sh  final.sh  main.sh  merge.sh  regrid.sh  varchange.sh  variational.sh
src/Workflows/StaticB/develop/: daily.sh  dirac.sh  final.sh  functions.sh  main.sh  merge.sh  parameters.sh  regrid.sh  variational.sh
src/Workflows/StaticB/env_script/: gnu-openmpi_env.sh  intel-impi_env.sh  rankfile.bash
src/Workflows/StaticB/skylab-1.0.0/: daily.sh  dirac.sh  final.sh  functions.sh  main.sh  merge.sh  parameters.sh  regrid.sh
src/Workflows/c12bmatscripts/: ReadMe.txt  c12bmatworkflow.sh  make_new_ensembleb_loc_gfs.sh  make_new_ensembleb_nicas_gfs.sh  make_new_ensembleb_prep_gfs.sh  make_new_ensembleb_split_nicas_gfs.sh  make_new_staticb_cor_gfs.sh  make_new_staticb_ens_to_psichi_gfs.sh  make_new_staticb_nicas_gfs.sh  make_new_staticb_prep_gfs.sh  make_new_staticb_sbatch.sh  make_new_staticb_split_nicas_gfs.sh  make_new_staticb_split_vbal_gfs.sh  make_new_staticb_var_gfs.sh  make_new_staticb_vbal_gfs.sh  make_new_staticb_yamls.sh  spack-env-gnu.sh  submit_new_ensembleb_prep.sh  submit_new_staticb_ens_to_psichi.sh  submit_new_staticb_prep.sh
src/fv3-jedi-wf/Workflows/: gfs_yaml.py
src/fv3files/: fv3grid_c0384.nc4
src/fv3jeditools/: __init__.py  diag_da_block_convergence.py  diag_da_convergence.py  diag_femps_convergence.py  diag_field_plot.py  diag_hofx_innovations.py  diag_hofx_map.py  diag_log_timing.py  diag_obs_scatter.py  fv3jeditools.py  gsidiag_to_ioda.py  parse_file_datetime.py  remove.py  stage_files.py  tar.py  untar.py  utils.py  utils_datetime.py
src/fv3jeditools/BkgHandling/: BkgHandling.py  BkgHandlingDriver.py  __init__.py
src/fv3jeditools/Config/: ConvertStatesGeos.py  DateConfigFile.py  __init_.py  __init__.py  common_conf.py  geos_conf.py  gfs_conf.py
src/fv3jeditools/ConvertEnsemble/: __init_.py  fv3mod_ens_proc.py  geos_ens_proc.py  gfs_ens_proc.py  process_ensemble.py  process_ensemble_gfsdiscover.py
src/fv3jeditools/DaRuns/: GeosVar.py  __init_.py  __init__.py
src/fv3jeditools/Diagnostics/: __init__.py  femps_convergence.py  gradient_norm.py  hofx.py  hofx_pdf_omb_oma.py  two_field_rms_corr.py
src/fv3jeditools/EnsHandling/: EnsHandling.py  EnsHandlingDriver.py  GeosEns0HourFcsts.py  GetEnsemble.py  __init__.py
src/fv3jeditools/FileHandling/: out.yaml  untar.py
src/fv3jeditools/ObsProcessing/: ObsHandling.py  ObsHandlingDriver.py  __init__.py  gmao_gsidiag_to_ioda.py  gsid2ioda_driver.py  gsid_to_ioda.py  gsidiag_to_ioda.py
src/fv3jeditools/Utils/: utils.py
src/mains/: __init__.py  process_ensemble.py  process_ensemble_gfsdiscover.py
src/modules/: __init__.py
src/modules/Workflows/: __init__.py  gfs.py  gfs_yaml.py  model_utils.py
src/raster/: plot_cubesphere_face.jnl  plot_cubesphere_ortho.jnl  raster.jnl  raster.py  raster_orion.jnl
test/fv3files/: input.nml_template
(+36 files in other folders)
