# coding: utf-8
# setup.cfg - Python packaging configuration

[metadata]
name = fv3jeditools
version = 0.0.1
url = "https://github.com/jcsda/fv3-jedi-tools"
description = Tools for FV3JEDI
long_description = file: README.md, LICENSE
#readme = os.path.join(os.path.dirname(__file__), "README.md")
#long_description = open(README).read() + "\n\n"
keywords = JEDI, FV3JEDI, Workflow
authors = Daniel Holdaway
authors_email = holdaway@ucar.edu
license = Apache
platforms = Linux, Unix, MacOS
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
package_dir =
    = src
packages = find_namespace:
setup_requires =
    flake8
install_requires =
    setuptools
    numpy
    yaml
    xarray
    h5netcdf
    netcdf4
    subprocess
    shutil
    psutil

[options.extras_require]
#Diagnostics =
#    pandas
#    matplotlib
#    cartopy

[options.packages.find]
where =
    src

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    BkgHandlingDriver = fv3jeditools.BkgHandling.BkgHandlingDriver:main
    ConvertStatesGEOS = fv3jeditools.Config.ConvertStatesGeos:main
    DateConfigFile = fv3jeditools.Config.DateConfigFile:main
    ProcessEnsemble = fv3jeditools.ConvertEnsemble.process_ensemble:main
    ProcessEnsembleGFSDiscover = fv3jeditools.ConvertEnsemble.process_ensemble_gfsdiscover:main
    GEOSVar = fv3jeditools.DaRuns.GeosVar:main
    FEMPSConvergence = fv3jeditools.Diagnostics.femps_convergence:main
    GradientNorm = fv3jeditools.Diagnostics.gradient_norm:main
    HofX = fv3jeditools.Diagnostics.hofx:main
    HofXOmAOmB = fv3jeditools.Diagnostics.hofx_pdf_omb_oma:main
    TwoFieldRMSCorr = fv3jeditools.Diagnostics.two_field_rms_corr:main
    EnsHandlingDriver = fv3jeditools.EnsHandling.EnsHandlingDriver:main
    GEOSEns0HrFcst = fv3jeditools.EnsHandling.GeosEns0HourFcsts:main
    ObsHandlingDriver = fv3jeditools.ObsHandling.ObsHandlingDriver:main
    GSI2IODA = fv3jeditools.ObsHandling.gsid_to_ioda:main

[aliases]
localdevelop = develop --user -e -b .
test = pytest
