# coding: utf-8
# setup.cfg - Python packaging configuration

[metadata]
name = fv3jeditools
version = 0.0.1
url = "https://github.com/jcsda/fv3-jedi-tools"
description = Tools for FV3JEDI
long_description = file: README.md, LICENSE
#readme = os.path.join(os.path.dirname(__file__), "README.md")
#long_description = open(README).read() + "\n\n"
keywords = JEDI, FV3JEDI, Workflow
authors = Daniel Holdaway
authors_email = holdaway@ucar.edu
license = Apache
platforms = Linux, Unix, MacOS
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
package_dir =
    = src
packages = find_namespace:
install_requires =
    numpy
    xarray
    netcdf4
    click
    ruamel.yaml

[options.extras_require]
#Diagnostics =
#    pandas
#    matplotlib
#    cartopy

[options.packages.find]
where =
    src

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    bkghandlingdriver.x = fv3jeditools.BkgHandling.BkgHandlingDriver:main
    convertstatesgeos.x = fv3jeditools.Config.ConvertStatesGeos:main
    processensemble.x = fv3jeditools.ConvertEnsemble.process_ensemble:main
    processensemblegfsdiscover.x = fv3jeditools.ConvertEnsemble.process_ensemble_gfsdiscover:main
    geosvar.x = fv3jeditools.DaRuns.GeosVar:main
    femps_convergence.x = fv3jeditools.Diagnostics.femps_convergence:main
    gradientnorm.x = fv3jeditools.Diagnostics.gradient_norm:main
    hofx.x = fv3jeditools.Diagnostics.hofx:main
    hofxomaomb.x = fv3jeditools.Diagnostics.hofx_pdf_omb_oma:main
    twofieldrmscorr.x = fv3jeditools.Diagnostics.two_field_rms_corr:main
    enshandlingdriver.x = fv3jeditools.EnsHandling.EnsHandlingDriver:main
    geosens0hrfcst.x = fv3jeditools.EnsHandling.GeosEns0HourFcsts:main
    obshandling_driver.x = fv3jeditools.ObsProcessing.ObsHandlingDriver:main
    gsi_to_ioda.x = fv3jeditools.ObsProcessing.gsid_to_ioda:main
    gsidiag_to_ioda.x = fv3jeditools.ObsProcessing.gsidiag_to_ioda:main
    get_ensemble.x = fv3jeditools.EnsHandling.GetEnsemble:main
    hpss_untar.x = fv3jeditools.FileHandling.hpss_untar:main

[aliases]
localdevelop = develop --user -e -b .
test = pytest
