# coding: utf-8
# setup.cfg - Python packaging configuration

[metadata]
name = fv3jeditools
version = 0.0.1
url = "https://github.com/jcsda/fv3-jedi-tools"
description = Tools for FV3JEDI
long_description = file: README.md, LICENSE
#readme = os.path.join(os.path.dirname(__file__), "README.md")
#long_description = open(README).read() + "\n\n"
keywords = JEDI, FV3JEDI, Workflow
authors = Daniel Holdaway
authors_email = holdaway@ucar.edu
license = Apache
platforms = Linux, Unix, MacOS
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
package_dir =
    = src
packages = find_namespace:
install_requires =
    numpy
    xarray
    netcdf4
    click
    ruamel.yaml

[options.extras_require]

[options.packages.find]
where =
    src

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    fv3jeditools.x = fv3jeditools.fv3jeditools:main

[aliases]
localdevelop = develop --user -e -b .
test = pytest
